# paradigma

./: .git-commit-msg  .gitignore  AGENT_RULES.md  INIT_PROMPT.md  README.md  pyproject.toml
.cursor/rules/: memory-bank-protocol.mdc
.github/workflows/: check.yml
.paradigma/: config.yaml
.paradigma/schemas/: paradigma-types.schema.yaml
.paradigma/tools/: _bootstrap.py  _index.py  _paradigma_yaml.py  _task_state.py  _version.py  pd-archive-task.py  pd-check-all.py  pd-check-hot-size.py  pd-check-links.py  pd-compact-progress.py  pd-diagnose.py  pd-index.py  pd-lint-okf.py  pd-sync-index.py  pd-version.py
docs/devplan/: paradigma_5+.md  paradigma_dev_5+.md
docs/rfc/: index.md  paradigma-okf-compatible-runtime.md
memory-bank/: active-task.template.md  architecture.template.md  changelog.template.md  conventions.md  data-contracts.template.md  decisions.template.md  glossary.template.md  known-issues.template.md  progress.template.md  roadmap.template.md
memory-bank-template/: DESIGN.md
memory-bank-template/knowledge/: architecture.template.md  conventions.template.md  glossary.template.md  project-brief.template.md
memory-bank-template/runtime/: active-task.template.md
memory-bank/domains/: module_1.template.md
memory-bank/knowledge/: architecture.md  conventions.md  glossary.md  index.md  project-brief.md
memory-bank/logs/: changelog.md
memory-bank/manuals/: deploy.md  testing-guide.md
memory_bank/: active-task.md  architecture.md  changelog.template.md  conventions.md  data-contracts.md  project-brief.md
tests/: __init__.py
(+93 files in other folders)
