[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paradigma"
dynamic = ["version"]
description = "OKF-compatible agent memory runtime and deterministic tooling"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MPL-2.0"}
dependencies = ["PyYAML>=6.0,<7"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
paradigma = ["py.typed"]

